syntax = "proto3";

package server;

enum RunningStatus {
    NORMAL = 0;
    MAINTAINING = 1;
}

message ServerVersion {
    int32 Major = 1;
    int32 Minor = 2;
    int32 Patch = 3;
}

message ServerInfo {
    RunningStatus status = 1;
    uint32 http_port = 2;
    ServerVersion server_version = 3;
}
